sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:3: error: not found: value n
  n =getValueCount
  ^AlgBubbleSort1:4: error: not found: value n
  for (i<-0 to n-2){
               ^AlgBubbleSort1:5: error: not found: value n
    for(j<-0 to n-1) {
                ^